--- a/Straight Line.html
+++ b/Straight Line.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+	  <style>
+  body {
+    background-color: grey;
+  }
+</style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta itemprop="application" content="Evernote">
